--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "bipf": "^1.6.3",
     "blake3": "^2.1.7",
+    "fast-varint": "^1.0.1",
+    "monotonic-timestamp": "^0.0.9",
     "ssb-bfe": "^3.1.3",
     "ssb-keys": "^8.2.1"
   },
